remove invisible search container that prevented from clicking underneath when search was not dropped down

--- a/app/assets/stylesheets/pages/_searched.scss
+++ b/app/assets/stylesheets/pages/_searched.scss
@@ -4,5 +4,10 @@ h3 {
 }
 
 .x {
-  width: 70vh;
+  width: 70%;
+}
+
+#map {
+  width: 50%;
+  height: 600px;
 }
